--- a/requirements.txt
+++ b/requirements.txt
@@ -1,124 +1,6 @@
---extra-index-url https://download.pytorch.org/whl/cu118
-absl-py==2.0.0
-accelerate==0.24.0
-aiohttp==3.8.6
-aiosignal==1.3.1
-asttokens==2.4.0
-astunparse==1.6.3
-async-timeout==4.0.3
-attrs==23.1.0
-backcall==0.2.0
-cachetools==5.3.1
-certifi==2023.7.22
-charset-normalizer==3.3.0
-chex==0.1.83
-click==8.1.7
-ctranslate2==3.22.0
-datasets==2.14.5
-decorator==5.1.1
-dill==0.3.7
-et-xmlfile==1.1.0
-etils==1.5.1
-evaluate==0.4.1
-exceptiongroup==1.1.3
-executing==2.0.0
-filelock==3.12.4
-flatbuffers==23.5.26
-flax==0.7.4
-frozenlist==1.4.0
-fsspec==2023.6.0
-gast==0.5.4
-google-auth==2.23.3
-google-auth-oauthlib==1.0.0
-google-pasta==0.2.0
-grpcio==1.59.0
-h5py==3.10.0
-huggingface-hub==0.17.3
-idna==3.4
-importlib-resources==6.1.0
-ipython==8.16.1
-jedi==0.19.1
-Jinja2==3.1.2
-joblib==1.3.2
-JPype1==1.4.1
-keras==2.14.0
-kiwipiepy==0.16.0
-kiwipiepy-model==0.16.0
-konlpy==0.6.0
-korouge-score==0.1.3
-libclang==16.0.6
-lxml==4.9.3
-Markdown==3.5
-markdown-it-py==3.0.0
-MarkupSafe==2.1.2
-matplotlib-inline==0.1.6
-mdurl==0.1.2
-ml-dtypes
-mpmath==1.3.0
-msgpack==1.0.7
-multidict==6.0.4
-multiprocess==0.70.15
-nest-asyncio==1.5.8
-networkx==3.0
-nltk==3.8.1
-numpy==1.26.1
-oauthlib==3.2.2
-openpyxl==3.1.2
-opt-einsum==3.3.0
-optax==0.1.7
-orbax-checkpoint==0.4.1
-packaging==23.2
-pandas==2.1.1
-parso==0.8.3
-pexpect==4.8.0
-pickleshare==0.7.5
-prompt-toolkit==3.0.39
-protobuf==4.23.4
-psutil==5.9.6
-ptyprocess==0.7.0
-pure-eval==0.2.2
-pyarrow==13.0.0
-pyasn1==0.5.0
-pyasn1-modules==0.3.0
-Pygments==2.16.1
-pyrouge==0.1.3
-python-dateutil==2.8.2
-pytz==2023.3.post1
-PyYAML==6.0.1
-regex==2023.10.3
-requests==2.31.0
-requests-oauthlib==1.3.1
-responses==0.18.0
-rich==13.6.0
-rouge==1.0.1
-rouge-score==0.1.2
-rsa==4.9
-safetensors==0.4.0
-scipy==1.11.3
-sentencepiece==0.1.99
-six==1.16.0
-stack-data==0.6.3
-sympy==1.12
-tensorboard==2.14.1
-tensorboard-data-server==0.7.1
-tensorflow==2.14.0
-tensorflow-estimator==2.14.0
-tensorflow-io-gcs-filesystem==0.31.0
-tensorstore
-termcolor==2.3.0
-tokenizers==0.14.1
-toolz==0.12.0
-torch==2.1.0+cu118
-tqdm==4.66.1
-traitlets==5.11.2
-transformers==4.34.1
-triton==2.1.0
-typing_extensions==4.8.0
-tzdata==2023.3
-urllib3==2.0.7
-wcwidth==0.2.8
-Werkzeug==3.0.0
-wrapt==1.14.1
-xxhash==3.4.1
-yarl==1.9.2
-zipp==3.17.0
+fastapi==0.95.0
+uvicorn==0.22.0
+pydantic==1.10.2
+transformers==4.31.0
+peft==0.4.0
+bitsandbytes==0.35.0
